--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "cb3default",
-  "version": "1.0.0",
+  "name": "cbvictory",
+  "version": "2.0.0",
   "license": "Apache2",
   "ignore": [
     "**/.*",
